# mlops-titanic

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  tox.ini
.github/workflows/: deploy.yml
api/: index.html  main.py
api/static/: index.html
classification_model/: config.yml  pipeline.py  predict.py  train_pipeline.py
classification_model/config/: core.py
classification_model/processing/: data_menager.py  features.py  validation.py
classification_model/trained_models/: random_forest_0.1.0.pkl
notebooks/: 01_data_exploration.ipynb  01_dataclean.ipynb  02_feature_engineering.ipynb  02_full_pipeline.ipynb  preprocessors.py
src/: config.yml  pipeline.py  predict.py  preprocessors.py  train_pipeline.py
src/config/: core.py
src/processing/: data_menager.py  validation.py
tests/: conftest.py  test_features.py
tests/config/: test_core.py
